<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Withdrawal_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7067F1"
        android:orientation="horizontal"
        tools:ignore="TextSizeCheck">

        <ImageView
            android:id="@+id/backactivity"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:text="@string/withdrawal"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_withdrawal_request_amount_650"
        android:textSize="30sp"
        android:textColor="#EE0F0F"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/taskview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_income"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/taskamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginLeft="10dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/referview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referral_income"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/referralamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/enteramount"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_style"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:paddingLeft="10dp"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/withdrawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />


</LinearLayout>